--- a/src/scss/components/_spacing.scss
+++ b/src/scss/components/_spacing.scss
@@ -1,8 +1,8 @@
 .novablocks-media--blog {
 
     @include specific(3) {
-        --block-top-spacing: 2;
-        --block-bottom-spacing: 2;
+        --block-top-spacing: 1;
+        --block-bottom-spacing: 1;
         --novablocks-element-spacing-multiplier: 0.5;
 
         &:first-child {
